--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -16,6 +18,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="argaam_app"
         android:icon="@mipmap/ic_launcher">
+        <service
+            android:name="com.mythichelm.localnotifications.services.LocalNotificationsService"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
