--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   flutter_launcher_icons: "^0.7.0"
   flutter_spinkit: "^3.1.0"
   carousel_slider: ^1.0.1
-  flutter_local_notifications: ^0.5.1+2
+  local_notifications: any
 #  firebase_admob: ^0.7.0
 #
 #  firebase_messaging: ^2.1.0
