--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   flutter_spinkit: "^3.1.0"
   carousel_slider: ^1.0.1
   local_notifications: any
+  share: ^0.6.0+1
 #  firebase_admob: ^0.7.0
-#
-#  firebase_messaging: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
